--- a/src/styles/Layout.less
+++ b/src/styles/Layout.less
@@ -1,10 +1,12 @@
 header {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   height: 8vh;
-  width: 100vw;
+  width: 100%;
   align-items: center;
   display: grid;
   position: sticky;
+  top: 0;
+  background-color: white;
 }
 
 nav {
