--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -1,10 +1,24 @@
-@import "./Layout.less";
+@import "./Header.less";
+@import "./Home.less";
 
+*,
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
 }
 
 body {
   margin: 0;
   font-family: "Lato", sans-serif;
+}
+
+section {
+  width: 100%;
+  height: 92vh;
+  display: flex;
+}
+
+.brown-line {
+  width: 20%;
+  height: 3px;
+  background-color: #d46a00;
 }
