--- a/src/styles/Header.less
+++ b/src/styles/Header.less
@@ -16,15 +16,28 @@ nav {
 }
 
 .header-nav-logo {
+  color: #000000;
+  text-decoration: none;
   cursor: pointer;
   font-size: 22px;
   display: flex;
+  transition: opacity 0.3s ease;
+}
+
+.header-nav-logo:hover {
+  opacity: 0.7;
 }
 
 .header-nav-links {
+  text-decoration: none;
   cursor: pointer;
   font-size: 22px;
   margin: 0px 10px;
+  transition: opacity 0.3s ease;
+}
+
+.header-nav-links:hover {
+  opacity: 0.7;
 }
 
 .header-nav-icons {
