About page, projects page, some components

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -22,3 +22,31 @@ section {
   height: 3px;
   background-color: #d46a00;
 }
+
+.pages-container-columns {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.page-title-container {
+  height: 10%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin-top: 2%;
+}
+
+.my-skills-container {
+  font-size: 18px;
+  color: #575757;
+  word-break: break-word;
+  margin: 4% 0;
+  gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
