--- a/src/styles/Home.less
+++ b/src/styles/Home.less
@@ -3,6 +3,7 @@
   justify-content: center;
   display: flex;
   align-items: center;
+  margin: 10px 0px;
 }
 
 .home-social-media-icons {
@@ -12,20 +13,11 @@
 }
 
 .home-brown-circle {
-  width: 70%;
-  aspect-ratio: 1;
+  width: 60%;
+  aspect-ratio: 1 / 1;
   background-color: #d46a00;
   border-radius: 50%;
   justify-content: center;
   align-items: center;
   display: flex;
-}
-
-.home-container-columns {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
