--- a/src/styles/Home.less
+++ b/src/styles/Home.less
@@ -21,3 +21,9 @@
   align-items: center;
   display: flex;
 }
+
+@media (max-width: 1115px) {
+  .home-section {
+    justify-content: center;
+  }
+}
