--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -1,6 +1,7 @@
 @import "./Header.less";
 @import "./Home.less";
 @import "./Projects.less";
+@import "./Contact.less";
 
 *,
 html {
@@ -16,6 +17,41 @@ section {
   width: 100%;
   height: 92vh;
   display: flex;
+}
+
+input {
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  height: 30px;
+  outline: none;
+  transition: border 0.3s ease;
+  font-family: "Lato", sans-serif !important;
+  font-size: 15px;
+}
+
+textarea {
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  height: 70px;
+  outline: none;
+  transition: border 0.3s ease;
+  font-family: "Lato", sans-serif !important;
+  font-size: 15px;
+}
+
+input:focus,
+input:hover,
+textarea:focus,
+textarea:hover {
+  border: 1px solid #d46a00;
+}
+
+svg {
+  transition: opacity 0.3s ease;
+}
+
+svg:hover {
+  opacity: 0.7 !important;
 }
 
 .brown-line {
