--- a/src/styles/Header.less
+++ b/src/styles/Header.less
@@ -46,3 +46,63 @@ nav {
   margin: 0px 10px;
   align-items: center;
 }
+
+.mobile-menu {
+  display: none;
+  cursor: pointer;
+}
+
+.mobile-menu div {
+  width: 24px;
+  height: 2px;
+  background-color: #000000;
+  margin: 5px;
+  will-change: transform;
+  transform: translateZ(0);
+  transition: 0.3s;
+}
+
+@media (max-width: 999px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .nav-list {
+    display: flex;
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 100vw;
+    height: 92vh;
+    background-color: white;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+  }
+
+  .header-nav-links {
+    margin: 0;
+  }
+
+  .mobile-menu {
+    display: block;
+  }
+}
+
+.nav-list.active {
+  transform: translateX(0);
+  transition: transform 0.3s ease-in;
+}
+
+.mobile-menu.active .line1 {
+  transform: rotate(-45deg) translate(-6px, 5px);
+}
+
+.mobile-menu.active .line2 {
+  opacity: 0;
+}
+
+.mobile-menu.active .line3 {
+  transform: rotate(45deg) translate(-5px, -5px);
+}
