--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -54,6 +54,29 @@ svg:hover {
   opacity: 0.7 !important;
 }
 
+/* Estiliza a barra de rolagem */
+::-webkit-scrollbar {
+  width: 8px; /* Define a largura da barra de rolagem */
+  height: 8px; /* Define a altura da barra horizontal, se necessário */
+}
+
+/* Estiliza o "thumb" (a parte que você arrasta) */
+::-webkit-scrollbar-thumb {
+  background-color: darkgray; /* Cor do "thumb" */
+  border-radius: 10px; /* Bordas arredondadas */
+}
+
+/* Remove as setas da barra de rolagem */
+::-webkit-scrollbar-button {
+  display: none; /* Oculta as setas */
+}
+
+/* Estiliza o fundo da barra de rolagem */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Cor do fundo */
+  border-radius: 10px; /* Bordas arredondadas no fundo também */
+}
+
 .brown-line {
   width: 20%;
   height: 3px;
