--- a/src/styles/Header.less
+++ b/src/styles/Header.less
@@ -7,6 +7,7 @@ header {
   position: sticky;
   top: 0;
   background-color: white;
+  z-index: 1000;
 }
 
 nav {
@@ -34,6 +35,7 @@ nav {
   font-size: 22px;
   margin: 0px 10px;
   transition: opacity 0.3s ease;
+  transition: color 0.3s ease;
 }
 
 .header-nav-links:hover {
