adjusting header on mobile, button to scroll top

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -54,27 +54,23 @@ svg:hover {
   opacity: 0.7 !important;
 }
 
-/* Estiliza a barra de rolagem */
 ::-webkit-scrollbar {
-  width: 8px; /* Define a largura da barra de rolagem */
-  height: 8px; /* Define a altura da barra horizontal, se necessário */
+  width: 8px;
+  height: 8px;
 }
 
-/* Estiliza o "thumb" (a parte que você arrasta) */
 ::-webkit-scrollbar-thumb {
-  background-color: darkgray; /* Cor do "thumb" */
-  border-radius: 10px; /* Bordas arredondadas */
+  background-color: darkgray;
+  border-radius: 10px;
 }
 
-/* Remove as setas da barra de rolagem */
 ::-webkit-scrollbar-button {
-  display: none; /* Oculta as setas */
+  display: none;
 }
 
-/* Estiliza o fundo da barra de rolagem */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; /* Cor do fundo */
-  border-radius: 10px; /* Bordas arredondadas no fundo também */
+  background: #f1f1f1;
+  border-radius: 10px;
 }
 
 .brown-line {
