--- a/src/styles/Header.less
+++ b/src/styles/Header.less
@@ -1,5 +1,4 @@
 header {
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   height: 8vh;
   width: 100%;
   align-items: center;
@@ -8,6 +7,11 @@ header {
   top: 0;
   background-color: white;
   z-index: 1000;
+  transition: box-shadow 0.3s ease;
+}
+
+.header-shadow {
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 nav {
@@ -49,62 +53,48 @@ nav {
   align-items: center;
 }
 
-.mobile-menu {
-  display: none;
-  cursor: pointer;
+.button-up {
+  display: flex !important;
+  border-radius: 50%;
+  background-color: #d46a00;
+  position: fixed;
+  right: 15px;
+  bottom: -20%;
+  border: none;
+  height: 32px;
+  justify-content: center;
+  opacity: 0.7;
+  transition: 0.5s ease;
 }
 
-.mobile-menu div {
-  width: 24px;
-  height: 2px;
-  background-color: #000000;
-  margin: 5px;
-  will-change: transform;
-  transform: translateZ(0);
-  transition: 0.3s;
+.button-up {
+  svg {
+    position: relative;
+    top: 3px;
+  }
+}
+
+.button-up:hover {
+  opacity: 0.5;
+}
+
+.show-button-up {
+  bottom: 20px;
 }
 
 @media (max-width: 999px) {
-  body {
-    overflow-x: hidden;
+  header {
+    top: unset;
+    position: fixed;
+    bottom: 0;
+    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1) !important;
   }
 
   .nav-list {
-    display: flex;
-    position: absolute;
-    top: 8vh;
-    right: 0;
-    width: 100vw;
-    height: 92vh;
-    background-color: white;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    transform: translateX(100%);
+    display: none;
   }
 
-  .header-nav-links {
-    margin: 0;
+  .show-button-up {
+    bottom: 65px;
   }
-
-  .mobile-menu {
-    display: block;
-  }
-}
-
-.nav-list.active {
-  transform: translateX(0);
-  transition: transform 0.3s ease-in;
-}
-
-.mobile-menu.active .line1 {
-  transform: rotate(-45deg) translate(-6px, 5px);
-}
-
-.mobile-menu.active .line2 {
-  opacity: 0;
-}
-
-.mobile-menu.active .line3 {
-  transform: rotate(45deg) translate(-5px, -5px);
 }
