--- a/src/styles/Header.less
+++ b/src/styles/Header.less
@@ -10,18 +10,13 @@ header {
   transition: box-shadow 0.3s ease;
 }
 
-.header-shadow {
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-}
-
 nav {
-  padding: 0px 4%;
+  padding: 0px 2%;
   display: flex;
   place-content: space-between;
 }
 
 .header-nav-logo {
-  color: #000000;
   text-decoration: none;
   cursor: pointer;
   font-size: 22px;
@@ -51,6 +46,11 @@ nav {
   cursor: pointer;
   margin: 0px 10px;
   align-items: center;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.header-nav-icons:hover {
+  opacity: 0.7;
 }
 
 .button-up {
@@ -63,7 +63,6 @@ nav {
   border: none;
   height: 32px;
   justify-content: center;
-  opacity: 0.7;
   transition: 0.5s ease;
 }
 
@@ -87,7 +86,6 @@ nav {
     top: unset;
     position: fixed;
     bottom: 0;
-    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1) !important;
   }
 
   .nav-list {
