--- a/src/themes/light/light-theme.less
+++ b/src/themes/light/light-theme.less
@@ -46,6 +46,12 @@ textarea {
   opacity: 0.7;
 }
 
+.theme-icon {
+  svg {
+    fill: black;
+  }
+}
+
 @media (max-width: 999px) {
   header {
     box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1) !important;
