--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -7,14 +7,14 @@
 
 .slider {
   margin: auto;
-  width: 800px;
-  height: 400px;
+  width: 70vw;
+  height: 70vh;
   overflow: hidden;
 }
 
 .slides {
   width: 400%;
-  height: 400px;
+  height: 70vh;
   display: flex;
 }
 
@@ -26,6 +26,8 @@
   width: 25%;
   position: relative;
   transition: 2s;
+  display: flex;
+  flex-direction: row;
 }
 
 .slide img {
@@ -34,8 +36,8 @@
 
 .manual-navigation {
   position: absolute;
-  width: 800px;
-  margin-top: -40px;
+  width: 70vw;
+  margin-top: -2vh;
   display: flex;
   justify-content: center;
 }
@@ -82,8 +84,8 @@
 
 .navigation-auto {
   position: absolute;
-  width: 800px;
-  margin-top: 360px;
+  width: 70vw;
+  margin-top: 68vh;
   display: flex;
   justify-content: center;
 }
@@ -106,6 +108,14 @@
 
 #radio4:checked ~ .navigation-auto .auto-btn4 {
   background-color: #fff;
+}
+
+.project-half-container {
+  height: 100%;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 @media (max-width: 1115px) {
