Adjusnting project carrossel, adjusting reponsivity

--- a/src/themes/dark/dark-theme.less
+++ b/src/themes/dark/dark-theme.less
@@ -13,6 +13,7 @@ a,
 span,
 label,
 svg,
+strong,
 h1 {
   color: #f4f4f4;
 }
@@ -60,4 +61,12 @@ textarea {
   svg {
     fill: #f4f4f4;
   }
+}
+
+.projects-arrow-buttons:hover {
+  background-color: rgb(60, 60, 60) !important;
+}
+
+.projects-arrow-buttons svg {
+  fill: #f4f4f4;
 }
