--- a/src/themes/light/light-theme.less
+++ b/src/themes/light/light-theme.less
@@ -13,6 +13,7 @@ a,
 span,
 label,
 h1,
+strong,
 svg {
   color: black;
 }
@@ -56,4 +57,12 @@ textarea {
   header {
     box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1) !important;
   }
+}
+
+.projects-arrow-buttons:hover {
+  background-color: rgb(235, 235, 235) !important;
+}
+
+.projects-arrow-buttons svg {
+  fill: rgb(95, 99, 104);
 }
