--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -1,8 +1,41 @@
+.projects-section-body {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .projects-container {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
+}
+
+.projects-arrow-buttons {
+  height: fit-content;
+  border: none;
+  border-radius: 30%;
+  background-color: transparent;
+  padding: 10px;
+  transition: 0.7s;
+
+  svg {
+    position: relative;
+  }
+}
+
+.right {
+  margin-right: 10%;
+  margin-left: 1%;
+}
+
+.left {
+  margin-left: 10%;
+  margin-right: 1%;
+
+  svg {
+    left: 3px;
+  }
 }
 
 .slider {
@@ -31,7 +64,8 @@
 }
 
 .slide img {
-  width: 800px;
+  width: 95%;
+  border: 2px solid #d46a00;
 }
 
 .manual-navigation {
@@ -43,7 +77,7 @@
 }
 
 .manual-btn {
-  border: 2px solid #fff;
+  border: 2px solid #d46a00;
   padding: 5px;
   border-radius: 10px;
   cursor: pointer;
@@ -55,7 +89,7 @@
 }
 
 .manual-btn:hover {
-  background-color: #fff;
+  background-color: #d46a00;
 }
 
 #radio1:checked ~ .first {
@@ -95,19 +129,19 @@
 }
 
 #radio1:checked ~ .navigation-auto .auto-btn1 {
-  background-color: #fff;
+  background-color: #d46a00;
 }
 
 #radio2:checked ~ .navigation-auto .auto-btn2 {
-  background-color: #fff;
+  background-color: #d46a00;
 }
 
 #radio3:checked ~ .navigation-auto .auto-btn3 {
-  background-color: #fff;
+  background-color: #d46a00;
 }
 
 #radio4:checked ~ .navigation-auto .auto-btn4 {
-  background-color: #fff;
+  background-color: #d46a00;
 }
 
 .project-half-container {
@@ -116,11 +150,85 @@
   justify-content: center;
   align-items: center;
   display: flex;
+  flex-direction: column;
+}
+
+.project-description {
+  margin: 0 1%;
+  text-align: justify;
 }
 
 @media (max-width: 1115px) {
   .projects-container {
     flex-direction: column;
     gap: 10vh;
+  }
+
+  .slide img {
+    width: unset;
+    height: 95%;
+  }
+
+  .slide {
+    flex-direction: column;
+  }
+
+  .project-half-container {
+    height: 50%;
+    width: 100%;
+  }
+
+  .project-description {
+    margin: 1% 0;
+  }
+}
+
+@media (max-width: 850px) {
+  .slide img {
+    height: 70%;
+  }
+
+  .right {
+    margin-right: 5%;
+  }
+
+  .left {
+    margin-left: 5%;
+  }
+
+  .project-description {
+    width: 95%;
+  }
+}
+
+@media (max-width: 550px) {
+  .slide img {
+    height: 55%;
+  }
+
+  .right {
+    margin-right: 1%;
+  }
+
+  .left {
+    margin-left: 1%;
+  }
+
+  .project-description {
+    width: 99%;
+  }
+
+  .navigation-auto {
+    margin-top: 73vh;
+  }
+
+  .manual-navigation {
+    margin-top: 3vh;
+  }
+}
+
+@media (max-width: 450px) {
+  .slide img {
+    height: 45%;
   }
 }
