adjusting resposivity, adjusting favicon

--- a/src/styles/Contact.less
+++ b/src/styles/Contact.less
@@ -19,3 +19,18 @@
     width: 70% !important;
   }
 }
+
+@media (max-width: 999px) {
+  form {
+    margin-bottom: 8vh;
+  }
+
+  .contact-section {
+    min-height: unset !important;
+  }
+
+  .contact-container {
+    margin-top: 10vh !important;
+    margin-bottom: 18vh !important;
+  }
+}
