--- a/src/styles/About.less
+++ b/src/styles/About.less
@@ -1,3 +1,8 @@
+.about-section {
+  flex-direction: column;
+  margin-top: 5%;
+}
+
 .company-link {
   color: #d46a00;
   font-weight: 500;
@@ -13,4 +18,20 @@
   font-size: 16px;
   word-break: break-word;
   margin: 4% 0;
+}
+
+.about-container {
+  height: 100%;
+  width: 100%;
+  flex-direction: row;
+  display: flex;
+  margin: auto;
+}
+
+@media (max-height: 700px) {
+  .about-section {
+    .page-title-container {
+      margin-bottom: 5%;
+    }
+  }
 }
