Clean code, form validators

--- a/src/styles/Contact.less
+++ b/src/styles/Contact.less
@@ -1,3 +1,8 @@
+.contact-section {
+  margin-top: 1%;
+  flex-direction: column;
+}
+
 .submit-button {
   width: 90px;
   height: 30px;
@@ -12,6 +17,21 @@
 
 .submit-button:hover {
   opacity: 0.7;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: auto 0;
+}
+
+.contact-container {
+  height: 100%;
+  display: flex;
+  margin-top: 7%;
+  justify-content: center;
+  margin: auto 0;
 }
 
 @media (max-width: 1115px) {
