--- a/src/styles/Home.less
+++ b/src/styles/Home.less
@@ -22,6 +22,17 @@
   display: flex;
 }
 
+.my-name-is {
+  font-size: clamp(1rem, 7vw, 3rem);
+  color: #d46a00;
+  margin: 5px 0px;
+}
+
+.home-page-texts {
+  font-size: clamp(1rem, 4vw, 2rem);
+  margin: 5px 0px;
+}
+
 @media (max-width: 1115px) {
   .home-section {
     justify-content: center;
