fixing sweet alert colors and behavior, textarea resize

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -31,11 +31,13 @@ input {
 
 textarea {
   border-radius: 5px;
-  height: 70px;
+  min-height: 140px;
+  width: 100%;
   outline: none;
   transition: border 0.3s ease;
   font-family: "Lato", sans-serif !important;
   font-size: 15px;
+  resize: none;
 }
 
 input:focus,
