Adjusting some mobile reponsivity

--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -237,7 +237,7 @@
     margin-left: 5% !important;
   }
 
-  .slide:last-child {
-    margin-right: 5%;
+  .last {
+    margin-right: 5% !important;
   }
 }
