--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -27,6 +27,7 @@ input {
   border-radius: 5px;
   height: 30px;
   outline: none;
+  width: 100%;
   transition: border 0.3s ease;
   font-family: "Lato", sans-serif !important;
   font-size: 15px;
