Adjusting home page and about page responsivity

--- a/src/styles/About.less
+++ b/src/styles/About.less
@@ -28,7 +28,7 @@
   margin: auto;
 }
 
-@media (max-height: 700px) {
+@media (max-height: 700px) and (max-width: 999px) {
   .about-section {
     .page-title-container {
       margin-bottom: 5%;
