Adjusting some theme colors and removing unused stuff

--- a/src/themes/dark/dark-theme.less
+++ b/src/themes/dark/dark-theme.less
@@ -70,3 +70,8 @@ textarea {
 .projects-arrow-buttons svg {
   fill: #f4f4f4;
 }
+
+.swiper-pagination-bullet {
+  opacity: 1;
+  background-color: gray;
+}
