--- a/src/themes/light/light-theme.less
+++ b/src/themes/light/light-theme.less
@@ -70,3 +70,8 @@ textarea {
 .projects-arrow-buttons svg {
   fill: rgb(95, 99, 104);
 }
+
+.swiper-pagination-bullet {
+  background-color: rgb(0, 0, 0);
+  opacity: 0.2;
+}
