Adjusting carousel colors

--- a/src/themes/dark/dark-theme.less
+++ b/src/themes/dark/dark-theme.less
@@ -75,3 +75,7 @@ textarea {
   opacity: 1;
   background-color: gray;
 }
+
+.swiper-pagination-bullet-active {
+  background-color: #d46a00 !important;
+}
