--- a/src/themes/light/light-theme.less
+++ b/src/themes/light/light-theme.less
@@ -75,3 +75,8 @@ textarea {
   background-color: rgb(0, 0, 0);
   opacity: 0.2;
 }
+
+.swiper-pagination-bullet-active {
+  background-color: #d46a00 !important;
+  opacity: 1;
+}
