Fixing home page reponsivity and carousel responsivity

--- a/src/styles/Home.less
+++ b/src/styles/Home.less
@@ -55,3 +55,21 @@
     top: 5vh;
   }
 }
+
+@media (max-height: 450px) {
+  .home-page-image {
+    display: none !important;
+  }
+
+  .home-page-texts-container {
+    padding-bottom: 0% !important;
+    height: 50% !important;
+  }
+}
+
+@media (max-width: 700px) {
+  .home-page-texts-container {
+    padding-bottom: 10%;
+    height: 40%;
+  }
+}
