--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -6,8 +6,8 @@
 }
 
 .projects-swiper {
-  height: 77vh;
-  width: 90vw;
+  height: 60vh;
+  width: 70vw;
   margin: auto;
 }
 
@@ -123,5 +123,22 @@
   .swiper-button-next,
   .swiper-button-prev {
     display: none;
+  }
+
+  .projects-swiper {
+    height: 80vh;
+    width: 90vw;
+    margin: auto;
+  }
+}
+
+@media (max-height: 450px) {
+  .project-image {
+    display: none;
+  }
+
+  .project-half-container {
+    height: 90%;
+    width: 100%;
   }
 }
