--- a/src/styles/Header.less
+++ b/src/styles/Header.less
@@ -87,18 +87,13 @@ nav {
     top: unset;
     position: fixed;
     bottom: 0;
+    height: 65px;
   }
 
   .nav-list {
     display: none;
   }
 
-  .show-button-up {
-    bottom: 65px;
-  }
-}
-
-@media (max-width: 550px) {
   .show-button-up {
     bottom: 85px;
   }
