--- a/src/styles/Contact.less
+++ b/src/styles/Contact.less
@@ -1,8 +1,3 @@
-.contact-section {
-  margin-top: 1%;
-  flex-direction: column;
-}
-
 .submit-button {
   width: 90px;
   height: 30px;
@@ -26,31 +21,14 @@
   margin: auto 0;
 }
 
-.contact-container {
-  height: 100%;
-  display: flex;
-  margin-top: 7%;
-  justify-content: center;
-  margin: auto 0;
-}
-
 @media (max-width: 1115px) {
   form {
     width: 70% !important;
   }
 }
 
-@media (max-width: 999px) {
-  form {
-    margin-bottom: 8vh;
-  }
-
-  .contact-section {
-    min-height: unset !important;
-  }
-
-  .contact-container {
-    margin-top: 10vh !important;
-    margin-bottom: 18vh !important;
+@media (max-width: 999px), (max-height: 999px) {
+  .contact-form {
+    margin-bottom: 100px;
   }
 }
