--- a/src/styles/Home.less
+++ b/src/styles/Home.less
@@ -33,10 +33,6 @@
   margin: 5px 0px;
 }
 
-.home-section {
-  height: 92vh !important;
-}
-
 @media (max-width: 1115px) {
   .home-section {
     justify-content: center;
@@ -53,12 +49,22 @@
 
   .home-page-image img {
     height: unset !important;
-    max-width: 70vw;
-    max-height: 40vh;
+    max-width: 70vw !important;
+    max-height: 40vh !important;
   }
 }
 
-@media (max-height: 450px) {
+@media (max-width: 999px) {
+  .home-section {
+    height: 100vh !important;
+  }
+
+  .home-page-texts-container {
+    margin-bottom: 65px;
+  }
+}
+
+@media (max-height: 500px) and (max-width: 1115px) {
   .home-page-image {
     display: none !important;
   }
