--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -107,10 +107,11 @@
   }
 
   .project-description {
+    justify-content: start;
+
     span {
       width: 95%;
       margin: 0 auto;
-      justify-content: start;
     }
   }
 
@@ -128,18 +129,8 @@
 
   .projects-swiper {
     height: 80vh;
+    min-height: 550px;
     width: 90vw;
     margin: auto;
-  }
-}
-
-@media (max-height: 450px) {
-  .project-image {
-    display: none;
-  }
-
-  .project-half-container {
-    height: 90%;
-    width: 100%;
   }
 }
