Components, responsivity, clean code

--- a/src/styles/Home.less
+++ b/src/styles/Home.less
@@ -33,6 +33,11 @@
   margin: 5px 0px;
 }
 
+.home-page-image img {
+  max-height: 65%;
+  max-width: 65%;
+}
+
 @media (max-width: 1115px) {
   .home-section {
     justify-content: center;
