--- a/src/styles/About.less
+++ b/src/styles/About.less
@@ -14,3 +14,39 @@
   word-break: break-word;
   margin: 4% 0;
 }
+
+.about-page-image img {
+  max-width: 65%;
+  max-height: 90%;
+}
+
+.brown-line.under-text {
+  width: 100%;
+  height: 2;
+}
+
+.content-title-container {
+  width: fit-content;
+  margin: 4% 0;
+
+  span {
+    font-size: 22px;
+  }
+}
+
+.about-me-text-container {
+  width: 100%;
+  height: fit-content;
+}
+
+@media (max-width: 1115px) {
+  .about-page-image {
+    display: none !important;
+  }
+}
+
+@media (max-width: 800px), (max-height: 600px) {
+  .about-page-image {
+    height: auto !important;
+  }
+}
