--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -42,7 +42,8 @@
 }
 
 .slide img {
-  width: 95%;
+  max-width: 90%;
+  max-height: 90%;
   border: 2px solid #d46a00;
 }
 
@@ -119,6 +120,10 @@
     scroll-snap-align: center;
     min-width: 90%;
   }
+
+  .projects-swiper {
+    min-height: 550px;
+  }
 }
 
 @media (max-width: 999px) {
@@ -129,8 +134,12 @@
 
   .projects-swiper {
     height: 80vh;
-    min-height: 550px;
     width: 90vw;
-    margin: auto;
+  }
+}
+
+@media (max-height: 600px) and (min-width: 1115px) {
+  .projects-swiper {
+    min-height: 350px;
   }
 }
