Adjusting changing theme bug

--- a/src/themes/dark/dark-theme.less
+++ b/src/themes/dark/dark-theme.less
@@ -73,7 +73,7 @@ textarea {
 
 .swiper-pagination-bullet {
   opacity: 1;
-  background-color: gray;
+  background-color: gray !important;
 }
 
 .swiper-pagination-bullet-active {
