--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -13,7 +13,7 @@
 
 .swiper-button-next,
 .swiper-button-prev {
-  color: #d46a00;
+  color: #d46a00 !important;
   font-size: 24px;
   transition: opacity 0.3s;
 }
