--- a/src/themes/light/light-theme.less
+++ b/src/themes/light/light-theme.less
@@ -72,7 +72,7 @@ textarea {
 }
 
 .swiper-pagination-bullet {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0) !important;
   opacity: 0.2;
 }
 
