--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -129,7 +129,7 @@
 @media (max-width: 999px) {
   .swiper-button-next,
   .swiper-button-prev {
-    display: none;
+    display: none !important;
   }
 
   .projects-swiper {
