--- a/src/styles/Home.less
+++ b/src/styles/Home.less
@@ -1,3 +1,8 @@
+.home-section {
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
 .home-social-medias-container {
   width: 100%;
   justify-content: center;
