Adjusting mobile respinsivity

--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -138,13 +138,7 @@
   }
 
   .projects-swiper {
-    height: 80vh;
+    height: 550px;
     width: 90vw;
-  }
-}
-
-@media (max-height: 600px) and (min-width: 1115px) {
-  .projects-swiper {
-    min-height: 350px;
   }
 }
