--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -1,69 +1,38 @@
-.projects {
-  opacity: 0;
-  transition: opacity 1s ease;
-}
-
-.projects-section-body {
-  display: flex;
-  flex-direction: row;
+.projects-container {
+  flex-wrap: wrap;
+  gap: 40px;
+  padding: 20px 0px;
   align-items: center;
-  margin: auto 0;
 }
 
-.projects-swiper {
-  height: 60vh;
-  width: 70vw;
-  margin: auto;
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-  color: #d46a00 !important;
-  font-size: 24px;
-  transition: opacity 0.3s;
-}
-
-.swiper-button-next:hover,
-.swiper-button-prev:hover {
-  opacity: 0.7;
-}
-
-.swiper-pagination-bullet {
-  transition: transform 0.3s;
-}
-
-.swiper-pagination-bullet-active {
-  background-color: #d46a00;
-}
-
-.slide {
-  width: 80%;
-  height: 90%;
-  margin: auto;
-  position: relative;
-  transition: 2s;
-  display: flex;
-  flex-direction: row;
-}
-
-.slide img {
-  max-width: 90%;
-  max-height: 90%;
-  border: 2px solid #d46a00;
-}
-
-.project-half-container {
-  height: 100%;
-  width: 50%;
-  justify-content: center;
+.page-item {
+  width: 330px;
+  height: 430px;
+  border-radius: 8px;
   align-items: center;
   display: flex;
   flex-direction: column;
+  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.page-item:hover {
+  transform: translateY(-2px);
+}
+
+.page-item img {
+  width: 100%;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 .project-description {
-  margin: 0 1%;
-  text-align: justify;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  text-align: center;
 }
 
 .project-buttons {
@@ -102,43 +71,15 @@
   margin-top: 5%;
 }
 
-@media (max-width: 1115px) {
-  .slide {
-    flex-direction: column;
-  }
 
-  .project-half-container {
-    height: 50%;
-    width: 100%;
-  }
-
-  .project-description {
-    justify-content: start;
-
-    span {
-      width: 95%;
-      margin: 0 auto;
-    }
-  }
-
-  .slide {
-    scroll-snap-align: center;
-    min-width: 90%;
-  }
-
-  .projects-swiper {
-    min-height: 550px;
+@media (max-width: 768px) {
+  .projects-container {
+    justify-content: space-between;
   }
 }
 
-@media (max-width: 999px) {
-  .swiper-button-next,
-  .swiper-button-prev {
-    display: none !important;
-  }
-
-  .projects-swiper {
-    height: 550px;
-    width: 90vw;
+@media (max-width: 480px) {
+  .projects-container{
+    flex-direction: column;
   }
 }
