--- a/src/themes/dark/dark-theme.less
+++ b/src/themes/dark/dark-theme.less
@@ -63,11 +63,16 @@ textarea {
   }
 }
 
-.swiper-pagination-bullet {
-  opacity: 1;
-  background-color: gray !important;
+.page-item {
+  border: 1px #575757 solid;
+  color: #f4f4f4;
+  box-shadow: 0 2px 4px rgba(244, 244, 244, 0.05), 
+              0 3px 8px rgba(244, 244, 244, 0.04), 
+              0 4px 6px rgba(244, 244, 244, 0.03);
 }
 
-.swiper-pagination-bullet-active {
-  background-color: #d46a00 !important;
+.page-item:hover {
+  box-shadow: 0 4px 8px rgba(244, 244, 244, 0.08), 
+              0 6px 12px rgba(244, 244, 244, 0.06), 
+              0 8px 16px rgba(244, 244, 244, 0.05);
 }
