--- a/src/themes/light/light-theme.less
+++ b/src/themes/light/light-theme.less
@@ -63,12 +63,16 @@ textarea {
   }
 }
 
-.swiper-pagination-bullet {
-  background-color: rgb(0, 0, 0) !important;
-  opacity: 0.2;
+.page-item {
+  border: 1px rgb(240, 240, 240) solid;
+  color: #575757;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05), 
+              0 3px 8px rgba(0, 0, 0, 0.04), 
+              0 4px 6px rgba(0, 0, 0, 0.03);
 }
 
-.swiper-pagination-bullet-active {
-  background-color: #d46a00 !important;
-  opacity: 1;
+.page-item:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08), 
+              0 6px 12px rgba(0, 0, 0, 0.06), 
+              0 8px 16px rgba(0, 0, 0, 0.05);
 }
