--- a/src/themes/light/light-theme.less
+++ b/src/themes/light/light-theme.less
@@ -65,19 +65,13 @@ textarea {
 
 .page-item {
   border: 1px rgb(240, 240, 240) solid;
-  color: #575757;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05), 
-              0 3px 8px rgba(0, 0, 0, 0.04), 
-              0 4px 6px rgba(0, 0, 0, 0.03);
 }
 
-.page-item:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08), 
-              0 6px 12px rgba(0, 0, 0, 0.06), 
-              0 8px 16px rgba(0, 0, 0, 0.05);
+.page-item span {
+  color: #575757 !important;
 }
 
-.my-skills-container img {
+.my-skills-container img, .page-item {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05), 
               0 3px 8px rgba(0, 0, 0, 0.04), 
               0 4px 6px rgba(0, 0, 0, 0.03);
@@ -85,7 +79,7 @@ textarea {
 
 }
 
-.my-skills-container img:hover {
+.my-skills-container img:hover, .page-item:hover  {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08), 
               0 6px 12px rgba(0, 0, 0, 0.06), 
               0 8px 16px rgba(0, 0, 0, 0.05);
