--- a/src/themes/dark/dark-theme.less
+++ b/src/themes/dark/dark-theme.less
@@ -71,17 +71,21 @@ textarea {
   color: #dcdcdc !important;
 }
 
-.my-skills-container img, .page-item {
-  box-shadow: 0 2px 4px rgba(244, 244, 244, 0.05), 
-              0 3px 8px rgba(244, 244, 244, 0.04), 
-              0 4px 6px rgba(244, 244, 244, 0.03);
+.my-skills-container img,
+.page-item {
+  box-shadow: 0 2px 4px rgba(244, 244, 244, 0.05),
+    0 3px 8px rgba(244, 244, 244, 0.04), 0 4px 6px rgba(244, 244, 244, 0.03);
   transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
-
 }
 
-.my-skills-container img:hover, .page-item:hover  {
-  box-shadow: 0 4px 8px rgba(244, 244, 244, 0.08), 
-              0 6px 12px rgba(244, 244, 244, 0.06), 
-              0 8px 16px rgba(244, 244, 244, 0.05);
+.my-skills-container img:hover,
+.page-item:hover {
+  box-shadow: 0 4px 8px rgba(244, 244, 244, 0.08),
+    0 6px 12px rgba(244, 244, 244, 0.06), 0 8px 16px rgba(244, 244, 244, 0.05);
   transform: translateY(-2px);
+}
+
+.home-page-image img,
+.about-page-image img {
+  box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.7);
 }
