--- a/src/styles/Projects.less
+++ b/src/styles/Projects.less
@@ -1,3 +1,8 @@
+.projects {
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
 .projects-container {
   flex-wrap: wrap;
   gap: 50px;
@@ -66,7 +71,6 @@
   margin-top: 5%;
 }
 
-
 @media (max-width: 768px) {
   .projects-container {
     justify-content: space-between;
@@ -74,7 +78,7 @@
 }
 
 @media (max-width: 480px) {
-  .projects-container{
+  .projects-container {
     flex-direction: column;
   }
 }
