adjusting image load animation

--- a/src/styles/Home.less
+++ b/src/styles/Home.less
@@ -49,6 +49,7 @@
   width: 500px;
   height: 500px;
   object-fit: cover;
+  transition: opacity 2s ease;
   border-radius: 37% 63% 65% 35% / 30% 34% 66% 70%;
 }
 
