--- a/src/styles/Home.less
+++ b/src/styles/Home.less
@@ -37,6 +37,7 @@
   white-space: nowrap;
   width: 0;
   max-width: fit-content;
+  font-family: "Charm", cursive;
   animation: typing 3s steps(30) 1s forwards, blink 0.75s step-end infinite;
 }
 
