--- a/src/themes/dark/dark-theme.less
+++ b/src/themes/dark/dark-theme.less
@@ -45,7 +45,7 @@ textarea {
 
 .theme-icon {
   svg {
-    fill: #d46a00;
+    fill: #ffd191;
   }
 }
 
@@ -88,4 +88,39 @@ textarea {
 .home-page-image img,
 .about-page-image img {
   box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.7);
+}
+
+.company-link,
+.my-name-is {
+  color: #ffd191 !important;
+}
+
+.project-buttons,
+.project-buttons svg,
+.submit-button {
+  color: #f4f4f4;
+}
+
+.submit-button,
+.project-buttons {
+  background-color: transparent;
+}
+
+.preview-button svg {
+  fill: #f4f4f4 !important;
+}
+
+input:focus,
+input:hover,
+textarea:focus,
+textarea:hover,
+.submit-button,
+.project-buttons {
+  border: 1px solid #ffd191 !important;
+}
+
+.brown-line,
+.button-up,
+.home-brown-circle {
+  background-color: #ffd191 !important;
 }
