adjusting dark theme second color

--- a/src/themes/dark/dark-theme.less
+++ b/src/themes/dark/dark-theme.less
@@ -45,7 +45,7 @@ textarea {
 
 .theme-icon {
   svg {
-    fill: #ffd191;
+    fill: #ffe3bb;
   }
 }
 
@@ -92,7 +92,7 @@ textarea {
 
 .company-link,
 .my-name-is {
-  color: #ffd191 !important;
+  color: #ffe3bb !important;
 }
 
 .project-buttons,
@@ -116,11 +116,11 @@ textarea:focus,
 textarea:hover,
 .submit-button,
 .project-buttons {
-  border: 1px solid #ffd191 !important;
+  border: 1px solid #ffe3bb !important;
 }
 
 .brown-line,
 .button-up,
 .home-brown-circle {
-  background-color: #ffd191 !important;
+  background-color: #ffe3bb !important;
 }
